[gd_scene load_steps=15 format=3 uid="uid://ccblk5av84ba0"]

[ext_resource type="Script" path="res://Scripts/Game/Hand.gd" id="1_iua7k"]
[ext_resource type="Script" path="res://Scripts/Game/Deck.gd" id="2_5g0m1"]
[ext_resource type="Script" path="res://Scripts/Game/GameManager.gd" id="3_j5ky3"]
[ext_resource type="PackedScene" uid="uid://ugo7esglev50" path="res://UI/Cards/ChooseColor.tscn" id="4_mrmgc"]
[ext_resource type="PackedScene" uid="uid://bwnaufmmb18sm" path="res://UI/EndMenu.tscn" id="4_v1nkc"]
[ext_resource type="Script" path="res://Scripts/Game/player.gd" id="4_v7pjx"]
[ext_resource type="PackedScene" uid="uid://bffbajirepksy" path="res://UI/StartMenu.tscn" id="5_wh6c1"]
[ext_resource type="Script" path="res://Scripts/Game/AI.gd" id="6_2ctia"]
[ext_resource type="PackedScene" uid="uid://b2an1o7ra2gxn" path="res://UI/Cards/DrawCard.tscn" id="6_l41qe"]
[ext_resource type="PackedScene" uid="uid://bqhedp23c4d8m" path="res://UI/Board.tscn" id="7_525pa"]
[ext_resource type="PackedScene" uid="uid://dcb0hjrld334v" path="res://UI/Cards/uno_button.tscn" id="7_q5vjv"]
[ext_resource type="Texture2D" uid="uid://dov84c35app6p" path="res://Sprites/bg.jpg" id="8_kvs75"]
[ext_resource type="AudioStream" uid="uid://idkkfgwposr7" path="res://Audio/bg_music.mp3" id="12_58p60"]
[ext_resource type="Script" path="res://Scripts/colorSounds.gd" id="14_xgvuf"]

[node name="UNO" type="Node2D"]

[node name="DECK" type="Node" parent="."]
script = ExtResource("2_5g0m1")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_j5ky3")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="EndMenu" parent="Camera2D" instance=ExtResource("4_v1nkc")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(1.5, 1.5)
metadata/_edit_use_anchors_ = true

[node name="ChooseColor" parent="Camera2D" instance=ExtResource("4_mrmgc")]

[node name="StartMenu" parent="Camera2D" instance=ExtResource("5_wh6c1")]

[node name="DrawCard" parent="Camera2D" instance=ExtResource("6_l41qe")]

[node name="UnoButton" parent="Camera2D" instance=ExtResource("7_q5vjv")]

[node name="Player" type="Node" parent="."]
script = ExtResource("4_v7pjx")

[node name="PlayerHand" type="Node" parent="Player"]
script = ExtResource("1_iua7k")

[node name="AIPlayer" type="Node" parent="."]
script = ExtResource("6_2ctia")

[node name="AIHand" type="Node" parent="AIPlayer"]
script = ExtResource("1_iua7k")

[node name="Board" parent="." instance=ExtResource("7_525pa")]

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -645
offset_left = -590.0
offset_top = -332.0
offset_right = 1330.0
offset_bottom = 748.0
scale = Vector2(0.615, 0.615)
texture = ExtResource("8_kvs75")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_58p60")
volume_db = -30.0
autoplay = true

[node name="Colors" type="AudioStreamPlayer" parent="."]
volume_db = -20.613
script = ExtResource("14_xgvuf")
